# shipit

./: .editorconfig  .gitignore  .markdownlint.yaml  .markdownlintignore  .shipit.toml  .yamllint.yaml  AGENTS.lex  AGENTS.md  CANARY_THROWAWAY.md  CHANGELOG.md  CONTEXT.md  README.lex  README.md  agent-start  codex-start  from  generate-agents-md  hatch_build.py  lefthook-local.yml  lefthook.yml  pixi.toml  pyproject.toml  resolve_threads.py
.agents/skills/: coordinating  grill-me-with-docs  lex-primer  shepherding-prs  shipit-grill-with-docs  shipit-planning  shipit-session-status  shipt-grill-with-docs  shipt-to-prd  to-spec
.claude/: settings.json
.claude/agents/: explorer.md  implementer.md  reviewer.md  shepherd.md
.claude/skills/: implementing  lex-primer  planning  shepherding-prs  shipit-to-issues  shipit-to-prd  shipt-to-issues  to-tickets
.codex/: hooks.json
.github/workflows/: advance-major.yml  ci.yml  copilot-review.yml  shipit-release.yml  wf-build.yml  wf-checks.yml  wf-prepare.yml  wf-publish.yml  wf-release.yml  wf-sign-mac.yml
CHANGELOG/: 1.0.0.md  1.1.0.md  1.1.1.md  1.2.0.md  1.2.1.md  1.2.2.md  1.2.3.md  1.2.4.md  1.3.0.md  1.3.1.md  1.3.2.md  1.4.0.md  1.4.1.md  1.4.2.md  1.4.3.md  README.md  unreleased-0-first-release.md  unreleased-1.1.0-rollup.md  unreleased-agy-reviewer-back-to-pro.md  unreleased-bootstrap-symlink-repo-root.md  unreleased-build-standalone-notes-relay.md  unreleased-canary-sign-e2e.md  unreleased-cascade-workflow-lint-clean.md  unreleased-changelog-gate.md  unreleased-channel-verify-per-repo-subdirs.md  unreleased-collapse-conda-direct.md  unreleased-conda-direct-stage.md  unreleased-conda-direct-t1.md  unreleased-conda-direct-t2.md  unreleased-conda-no-binary-relocation.md  unreleased-conda-noarch-producer.md  unreleased-conda-packager-endpoint-gated.md  unreleased-conda-producer-seed-fixes.md  unreleased-conda-real-build-harness.md  unreleased-deb-composition.md  unreleased-declared-payload.md  unreleased-dependencies-doc.md  unreleased-gh-setup-phantom-check-discovery.md  unreleased-install-pr-branch-restore.md  unreleased-install-pr-touched-set.md  (+26 more)
assets/: shipit-logo.ai
canary/: planted_bug.py
docker/: verify-self-provision.sh
docs/: dependencies.md
docs/adr/: 0001-reuse-release-core-by-copy.md  0002-adapt-release-primitives-two-cli-conventions.md  0003-install-reconciliation-pull-not-push.md  0004-lint-gate-orchestration-in-binary.md  0004-lint-orchestration-in-binary.md  0005-local-review-funnel-via-check-runs.md  0006-readiness-with-degraded-reviewers.md  0007-repo-as-path-toolchain-map.md  0008-content-addressed-artifact-identity.md  0009-partial-release-prevention-barrier-then-resumable.md  0010-reusable-workflows-and-producing-logic-home.md  0011-role-scoped-generated-prompts.md  0012-enforcement-via-native-hooks.md  0013-eval-objective-first-local-only.md  0014-trees-dissociated-clones-central-root.md  0015-tree-artifacts-per-tree-target-sccache.md  0016-slash-namespaced-branches-epic-umbrella.md  0017-shipit-owned-subagent-spawning.md  0018-read-only-trees.md  0019-headless-claude-run-launch-contract.md  0020-backend-adapter-contract.md  0021-value-objects-functional-core.md  0022-layer-boundary-model-vs-borrow-pixi.md  0023-stay-python-defer-rust-rewrite.md  0024-core-identities-repo-workingdir-pr.md  0025-agent-model-invocation-axes.md  0026-slash-namespaced-standalone-issue-branches.md  0027-coordinator-session-tree-ephemeral.md  0028-one-exec-seam-tool-adapters.md  0029-agents-first-jsonl-logging.md  0030-cli-boundary-parse-to-values-typed-results.md  0031-engine-sole-requester-required-reviewers.md  0032-dev-cycle-events-tagged-records-witness-tiers.md  0033-repo-pins-its-shipit.md  0034-pr-wait-blocking-verb.md  0035-shepherd-per-pr.md  0036-the-gate-owns-style.md  0037-the-gate-owns-the-config.md  0038-pretooluse-guard-fails-closed.md  0039-tools-as-verbs.md  (+43 more)
docs/dev/: ROADMAP.lex  adoption-runbook.lex  adoption-runbook.md  agent-host-seams.lex  agent-host-seams.md  architecture.lex  artifact-channel-store-provisioning.md  ci-cache-spike.md  codex-coordinator-dogfood.md  containers.md  epics.lex  epics.md  lessons-learned.lex  naming.lex  pixi.lex  pixi.md  release-tool-provisioning.md  review-app-provisioning.md  ses02-worktreecreate-discriminator-spike.md  spawn-dogfood-verification.md  tol02-ws07-go-no-go.md  tol02-ws10-pixi-build-spike.md  verbs-tasks.lex  workflows.lex
docs/legacy-prd/: FUTURE_WORK.md  README.md  adoption.md  core-model.md  flu01-prf01-followups.md  glassbox.md  install-reconciliation.md  lint-checks.md  lnt01-lint-hermeticity.md  log04-dev-cycle-event-log.md  obs01-logging.md  obs02-review-funnel.md  obs03-async-review.md  obs04-readiness-engine.md  opportunity-capture.md  pixi-test-build-release.md  prf01-pr-flow.md  role-profiles-work-env.md  rvw01-sole-requester.md  session-bootstrap.md  wf01-pixi-encapsulation-generic-ci.md  wf02-content-addressed-artifacts.md  (+2 more)
gh/: issue-lables.toml  main-branch-protection.json
lab/: README.md  fixture.toml
scratch_canary/: divide.py
scripts/: provision-lexd.sh
tests/: conftest.py  test_adoption_runbook.py  test_agent_backend.py  test_agent_invocation.py  test_artifact_source.py  test_branchid.py  test_build_verb.py  test_buildid.py  test_changelog.py  test_changelog_verb.py  test_channel_cascade_receive.py  test_channel_store_provision.py  test_checks.py  test_ci_verb.py  test_ci_workflow.py  test_cli.py  test_cli_seam.py  test_config.py  test_config_artifact_deps.py  test_config_artifacts.py  test_config_stage.py  test_config_writer.py  test_e2e_verb.py  test_eval_report.py  test_eval_score_bank.py  test_events.py  test_execrun.py  test_finding.py  test_fleet_sweep.py  test_flowview.py  test_fspath.py  test_gh_adapter.py  test_gh_logging.py  test_gh_resolve_pr.py  test_gh_setup.py  test_gh_tree_reads.py  test_git_adapter.py  test_harness_codepath.py  test_harness_eval_extractors.py  test_harness_eval_locate.py  (+150 more)
tools/: conda_channel_roundtrip.py  lex-convert-all-files.sh  lex-convert-doc.sh  provision-lexd.sh  regen-roles.sh
(+447 files in other folders)
