[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipit"
version = "0.0.1"
description = "Portfolio standardization tooling — provisioning, gh-setup, lint, PR flow, release — on pixi."
requires-python = ">=3.13"
# Runtime deps are pure-python wheel pulls (no native build step):
#   click        — the CLI framework backing the `shipit <command>` tree.
#   PyYAML       — parse a target repo's workflow files for required-check discovery.
#   platformdirs — resolve the per-platform log directory (OBS01 logging); the
#                  single source of truth for the log path (no platform branches).
#   duckdb       — the SQL query engine behind `shipit eval report` (HAR02-WS04):
#                  it reads the local JSONL eval store directly (read_json_auto) so
#                  aggregation is plain SQL with no platform/infra (ADR-0013).
#   structlog    — the JSONL log pipeline (LOG01 logging, ADR-0029): its
#                  ProcessorFormatter attaches to the logsetup handlers so the
#                  file sink emits JSONL while console stderr stays human;
#                  zero transitive dependencies.
dependencies = [
    "click>=8,<9",
    "PyYAML>=6",
    "platformdirs>=4",
    "duckdb>=1",
    "structlog>=25",
]

[project.optional-dependencies]
# Local-agent review EXECUTION (PRF01-WS07). Posting a review AS a GitHub App
# needs PyJWT (with its crypto backend) to sign the RS256 app JWT from the
# in-memory PEM. Optional because most consumers never run a local review — the
# `review/` package imports `jwt` lazily and raises a clean install hint if absent.
review = ["pyjwt[crypto]>=2.8"]

[project.scripts]
shipit = "shipit.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/shipit"]

# Vendor the managed skills into the wheel as package data. skills/ lives at the
# repo root (it is also shipit's own Claude skill set), so it is force-included
# rather than re-homed under src/. It is OUTSIDE src/shipit, so this does not
# collide with the packages= bundling above (no double-add).
#
# The generated subagent agent-defs are force-included the same way: they live at
# `.claude/agents/` (where Claude Code reads them for shipit-self) and are vendored
# into the wheel so `shipit install` can lay them into a consumer's `.claude/agents/`.
# One source (the regen-roles generator), two readers (shipit-self at the repo
# root, the wheel for install) — never committed twice.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "shipit/data/skills"
".claude/agents" = "shipit/data/agents"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
