[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipit"
version = "1.2.3"
description = "Portfolio standardization tooling — provisioning, gh-setup, lint, PR flow, release — on pixi."
requires-python = ">=3.13"
# Runtime deps are pure-python wheel pulls (no native build step):
#   click        — the CLI framework backing the `shipit <command>` tree.
#   PyYAML       — parse a target repo's workflow files for required-check discovery.
#   platformdirs — resolve the per-platform log directory (OBS01 logging); the
#                  single source of truth for the log path (no platform branches).
#   duckdb       — the SQL query engine behind `shipit eval report` (HAR02-WS04):
#                  it reads the local JSONL eval store directly (read_json_auto) so
#                  aggregation is plain SQL with no platform/infra (ADR-0013).
#   structlog    — the JSONL log pipeline (LOG01 logging, ADR-0029): its
#                  ProcessorFormatter attaches to the logsetup handlers so the
#                  file sink emits JSONL while console stderr stays human;
#                  zero transitive dependencies.
#   jc           — ADR-0028's "converted" harvest rung for JSON-less tools:
#                  turns classic CLI output (here: `ps` in session/liveness)
#                  into structured dicts, replacing hand positional parsing.
#                  Pure-python wheel; its transitive deps (ruamel.yaml,
#                  xmltodict, Pygments) are pure-python wheels too.
dependencies = [
    "click>=8,<9",
    "PyYAML>=6",
    "platformdirs>=4",
    "duckdb>=1",
    "structlog>=25",
    "jc>=1.25",
]

[project.optional-dependencies]
# Local-agent review EXECUTION (PRF01-WS07). Posting a review AS a GitHub App
# needs PyJWT (with its crypto backend) to sign the RS256 app JWT from the
# in-memory PEM. Optional because most consumers never run a local review — the
# `review/` package imports `jwt` lazily and raises a clean install hint if absent.
review = ["pyjwt[crypto]>=2.8"]

[project.scripts]
shipit = "shipit.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/shipit"]

# Embed the building checkout's git HEAD sha as shipit/data/build-sha
# (hatch_build.py, ADR-0033): one of the three places shipit.buildid resolves
# the build's own commit identity from when `shipit install` stamps the pin.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Vendor the managed skills into the wheel as package data. The store lives at the
# repo root as `.shipit-skills/` (dot-prefixed and dedicated so shipit's OWN skill
# set never collides with the public `skills/` convention a repo uses to publish
# its own skills, #921), so it is force-included rather than re-homed under src/.
# It is OUTSIDE src/shipit, so this does not collide with the packages= bundling
# above (no double-add). The wheel dest stays `shipit/data/skills` so
# `skills_root()`'s bundled lookup is unchanged.
#
# The generated subagent agent-defs are force-included the same way: they live at
# `.claude/agents/` (where Claude Code reads them for shipit-self) and are vendored
# into the wheel so `shipit install` can lay them into a consumer's `.claude/agents/`.
# One source (the regen-roles generator), two readers (shipit-self at the repo
# root, the wheel for install) — never committed twice.
#
# The AGY native reviewer def (#989) is vendored the same way: it lives at
# `.agents/agents/` (where `agy --agent reviewer` reads it for shipit-self) and is
# force-included so `shipit install` can lay it into a consumer's `.agents/agents/`.
# Only the `agents/` subtree is vendored, NOT the whole `.agents/` dir (which also
# holds `.agents/skills/`, a separate concern).
[tool.hatch.build.targets.wheel.force-include]
".shipit-skills" = "shipit/data/skills"
".claude/agents" = "shipit/data/agents"
".agents/agents" = "shipit/data/agy-agents"

# shipit's ruff config was CARVED OUT of this file into a standalone `ruff.toml`
# (LNT01-WS03 #516, ADR-0037 "the gate owns the config"): the ONE canonical body
# ships as shipit data (`src/shipit/data/ruff.toml`, byte-identical to the repo
# root `ruff.toml` — a drift test guards it) and the lint gate INJECTS it
# (`ruff --config <that>`) so the verdict never depends on an ancestor/user config.
# There is deliberately no `[tool.ruff]` table here anymore; `ruff.toml` is the
# single source, seeded fleet-wide in WS06 (#519).

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    # Opts a test OUT of the autouse session-store home guard (tests/conftest.py), which
    # otherwise points `sessionstore`'s default `~` at a tmp dir so no test can plant a
    # symlink in the developer's real `~/.claude`. Only for tests that assert on the
    # real default as a PATH VALUE and touch no filesystem.
    "real_session_store_home: read the real ~ as the session store default (ADR-0073)",
]
